app/static/style.css
html {
  font-family: sans-serif;
  background: #eee;
  padding: 1rem;
}

body {
  max-width: 1000px;
  margin: 0 auto;
  background: white;
  border-radius: 15px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto", sans-serif;
  color: #377ba8;
  font-weight: 400;
  margin: 1rem 0;
}

h1.main-title {
  font-family: "Bebas Neue", sans-serif;
  color: #377ba8;
  font-weight: 600;
  letter-spacing: 3px;
  margin: 1rem 0;
}

a {
  color: #377ba8;
}

hr {
  border: none;
  border-top: 1px solid lightgray;
}

nav {
  background: lightgray;
  display: flex;
  align-items: center;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  padding: 0 0.5rem;
  height: 3em;
}

nav h1 {
  flex: auto;
  margin: 0;
  font-weight: 700;
  font-size: 30px;
}

nav h1 a {
  text-decoration: none;
  padding: 0.25rem 0.5rem;
}

nav ul {
  display: flex;
  list-style: none;
  margin: 6px;
  padding: 0;
}

nav ul li a,
nav ul li span,
header .action {
  display: block;
  padding: 14.75px 1em;
  text-decoration: none;
  font-weight: 600;
}

nav ul li a:hover:not(.active) {
  background-color: rgb(193, 203, 210);
  transition: ease-in-out;
  transition-duration: 0.2s;
}

nav ul li a.active {
  background-color: #377ba8;
  color: #a9d8f7;
}

.content {
  padding: 0 1rem 1rem;
}

.content > header {
  border-bottom: 1px solid lightgray;
  display: flex;
  align-items: flex-end;
}

.content > header h1 {
  flex: auto;
  margin: 1rem 0 0.25rem 0;
}

.flash {
  margin: 1em 0;
  padding: 1em;
  background: #cfe7f9;
  border: 1px solid #377ba8;
  border-radius: 5px;
}

.error {
  margin: 1em 0;
  padding: 1em;
  background: #f6caca;
  border: 1px solid #a83737;
}

.warn {
  margin: 1em 0;
  padding: 1em;
  background: #f6eaca;
  border: 1px solid #a88237;
}

.info {
  margin: 1em 0;
  padding: 1em;
  background: #cae6f6;
  border: 1px solid #377ba8;
}

.post > header {
  display: flex;
  align-items: center;
  font-size: 0.85em;
}

.post > header > div:first-of-type {
  flex: auto;
}

.post > header > div > h1 {
  word-wrap: break-word;
  max-width: 700px;
}

.post > header h1 {
  font-size: 1.5em;
  margin-bottom: 0;
}

.post .about {
  color: slategray;
  font-style: italic;
}

.post .body {
  white-space: pre-line;
  word-wrap: break-word;
}

.content:last-child {
  margin-bottom: 0;
}

.content form {
  margin: 1em 0;
  display: flex;
  flex-direction: column;
  text-align: left;
  margin: 10px;
}

.content label {
  font-family: "Roboto", sans-serif;
  color: #000000;
  font-weight: 300;
  font-weight: bold;
  margin-bottom: 0.5em;
}

.required:after {
  content: " *";
  color: red;
}

label.required-description {
  color: red;
  font-size: 12px;
}

.required-description:before {
  content: "* ";
  color: red;
}

.content input,
.content textarea {
  margin-bottom: 15px;
  border: 0;
  padding: 10px;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.18);
  border-radius: 10px;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 16px;
}

.content input:disabled {
  background-color: #ebeaea;
  box-shadow: 0 0 0 0;
}

.content textarea {
  min-height: 12em;
  resize: vertical;
}

input[type="submit"] {
  align-self: start;
  min-width: 15em;
  min-height: 3em;
  margin: 10px;
}

input[type="submit"]:hover {
  cursor: pointer;
  transform: scale(1.08);
}

input.confirm {
  background-color: #a9d8f7;
  color: #377ba8;
}

input.cancel {
  background-color: #dedede;
  color: #000000;
}

input.danger {
  background-color: #f6caca;
  color: #cc2f2e;
}

input:focus {
  outline-color: #377ba8;
}

textarea:focus {
  outline-color: #377ba8;
}

.info-box {
  background-color: #e3e3e3;
  border-radius: 15px;
  padding: 1px;
  margin: 15px;
  align-items: center;
}

.info-box-header {
  color: rgb(0, 0, 0);
  font-size: 16px;
  letter-spacing: 1px;
  text-align: center;
}

.warning-box {
  background-color: #fee0e0;
  border-radius: 15px;
  padding: 15px;
  margin: 15px;
  display: table;
}

.warning-header {
  color: red;
  font-size: 18px;
  letter-spacing: 1px;
  text-align: center;
}

.product-list-box {
  background-color: #c5e8ff;
  border-radius: 15px;
  padding: 15px;
  margin: 15px;
}

.product-list-header {
  color: #377ba8;
  font-size: 18px;
  letter-spacing: 1px;
  text-align: center;
}

.product-list-item-wrapper {
  max-height: 500px;
  overflow-y: auto;
}

.product-list-listing {
  background-color: #ffffff;
  border-radius: 15px;
  padding: 10px;
  margin: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.product-list-index {
  background-color: #377ba8;
  border-radius: 15px;
  padding: 5px;
  margin: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.product-list-index h3 {
  margin: 0;
  font-size: 2;
  color: #c5e8ff;
  margin-left: 50px;
  margin-right: 50px;
}

.product-list-listing label {
  margin: 0;
  font-weight: 400;
  max-width: 700px;
  word-wrap: break-word;
}

.product-list-listing input {
  width: 100px;
  margin: 0;
}

.product-list-total {
  background-color: #377ba8;
  border-radius: 15px;
  padding: 5px;
  margin: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.product-list-total h3 {
  margin: 0;
  font-size: 2;
  color: #ffffff;
  margin-left: 50px;
  margin-right: 50px;
}

table {
  margin: 15px;
  margin-top: 5px;
  border-collapse: collapse;
}

.warning {
  width: 96%;
  margin-top: 10px;
}

.warning td {
  padding: 8px;
  text-align: center;
  border-bottom: 1px solid #ffffff;
}

.warning th {
  background-color: #a83737;
  color: white;
  padding: 8px;
  text-align: center;
  border-bottom: 1px solid #ffffff;
}

.warning tr:nth-child(odd) {
  background-color: #fcdede;
}
.warning tr:nth-child(even) {
  background-color: #feebeb;
}

thead th {
  width: 25%;
}

.button_holder {
  text-align: center;
  display: inline-block;
}

/* PAGINATION BAR */
.pagination {
  display: inline-block;
  text-align: center;
  margin: 5px;
}

.pagination a {
  color: black;
  float: left;
  padding: 8px 16px;
  text-decoration: none;
  border-radius: 5px;
  border: 1px solid #ddd;
  margin: 0 3px;
}

.pagination a.active {
  background-color: #e4f0f9;
  color: #377ba8;
  border-radius: 5px;
  border: 1px solid #ddd;
}

.pagination a.etc {
  .pagination a.active {
    background-color: #bebebe;
    color: white;
    border-radius: 5px;
    border: 1px solid #ddd;
  }
}

.pagination a:first-child {
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.pagination a:last-child {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.pagination a:hover:not(.active, .etc) {
  background-color: #ddd;
}

/* DASHBOARD BOXES */
.box-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  gap: 50px;
  margin: 3em;
}

.box {
  height: 120px;
  width: 280px;
  border-radius: 20px;
  box-shadow: 3px 3px 10px rgba(1, 40, 113, 0.751);
  background-color: #e4f0f9;
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  cursor: pointer;
  transition: transform 0.3s ease-in-out;
}

.box:hover {
  transform: scale(1.08);
}

.box-content {
  font-size: 16px;
  font-weight: 600;
  letter-spacing: 1px;
}

.box-title {
  font-size: 30px;
  letter-spacing: 3px;
}

/* SUBTITLE BAR */
.subtitle-bar {
  width: 100%;
  align-items: center;
  margin: 5px;
}

.subtitle-text {
  float: left;
  align-items: center;
}

.button {
  height: 4px;
  width: 60px;
  border-radius: 20px;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.18);
  padding: 15px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  cursor: pointer;
  transition: transform 0.3s ease-in-out;
  float: right;
  text-decoration: none;
  margin: 0.5em;
}

.button.new {
  background-color: #e4f0f9;
}

.button.new:hover {
  background-color: #cfe7f9;
}

.button.edit {
  background-color: #e7e7e8;
}

.button.edit:hover {
  background-color: #c8c8cb;
}

.button.delete {
  background-color: #fcc7c7;
  color: #cc2f2e;
}

.button.delete:hover {
  background-color: #f9abab;
}

.button.orders {
  width: 100px;
  background-color: #e7e7e8;
}

.button.orders:hover {
  width: 100px;
  background-color: #c8c8cb;
}

.button.paid {
  background-color: #c4c1c1;
  cursor: default;
}

/* CUSTOMIZING MATERIAL ICONS */

.material-icons-outlined.md-80 {
  font-size: 80px;
}
.material-icons-outlined.md-20 {
  font-size: 20px;
}
.material-icons-outlined.blue {
  color: #377ba8;
}
.material-icons-outlined.gray {
  color: #717171;
}
.material-icons-outlined.red {
  color: #cc2f2e;
}
.material-icons-outlined.mr5 {
  margin-right: 5px;
}

